Fixed super-wide scrollbar silliness

--- a/mod.css
+++ b/mod.css
@@ -89,3 +89,8 @@ body.contents #msn input {width:4em; color:green; font-weight: bold;}
 body.contents #loading {width:10em; font-size:1.5em; margin:2em auto; padding: 1em; border:1px solid black; text-align:center; font-weight:bold;}
 
 body.ezy .latestRevision {background-color: #FFFFA0;}
+
+::-webkit-scrollbar {
+    width:auto !important;
+    height:auto !important;
+}
